--- a/TorboFile/View/Controls/MainViews/FindDuplicatesControl.xaml
+++ b/TorboFile/View/Controls/MainViews/FindDuplicatesControl.xaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TorboFile.Controls"
-             xmlns:lerp="clr-namespace:LerpingLemur.Windows.Controls"
-             xmlns:convert="clr-namespace:LerpingLemur.Windows.Converters"
+             xmlns:lerp="clr-namespace:Lemur.Windows.Controls"
+             xmlns:convert="clr-namespace:Lemur.Windows.Converters"
              mc:Ignorable="d"
              xmlns:controls="clr-namespace:TorboFile.Controls"
              xmlns:model="clr-namespace:TorboFile.ViewModels"
