--- a/TorboFile/View/Windows/EditCategoryWindow.xaml
+++ b/TorboFile/View/Windows/EditCategoryWindow.xaml
@@ -4,8 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TorboFile.Windows"
-        xmlns:lemur="clr-namespace:LerpingLemur.Windows.Controls"
-        xmlns:v="clr-namespace:LerpingLemur.Windows.Validation"
+        xmlns:lemur="clr-namespace:Lemur.Windows.Controls"
+        xmlns:v="clr-namespace:Lemur.Windows.Validation"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d"
                 Style="{StaticResource AppWindow}"
