--- a/TorboFile/View/Windows/MainMenu.xaml
+++ b/TorboFile/View/Windows/MainMenu.xaml
@@ -6,9 +6,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TorboFile"
-        xmlns:lerp="clr-namespace:LerpingLemur.Windows.Controls"
+        xmlns:lerp="clr-namespace:Lemur.Windows.Controls"
         xmlns:controls="clr-namespace:TorboFile.Controls"
-        xmlns:converters="clr-namespace:LerpingLemur.Windows.Converters"
+        xmlns:converters="clr-namespace:Lemur.Windows.Converters"
         xmlns:svg="http://sharpvectors.codeplex.com/svgc/"
         mc:Ignorable="d"
         Style="{StaticResource AppWindow}"
