--- a/TorboFile/App.xaml
+++ b/TorboFile/App.xaml
@@ -6,8 +6,8 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:local="clr-namespace:TorboFile"
              xmlns:categories="clr-namespace:TorboFile.Categories"
-             xmlns:lerptext="clr-namespace:LerpingLemur.Windows.Text"
-             xmlns:convert="clr-namespace:LerpingLemur.Windows.Converters"
+             xmlns:lerptext="clr-namespace:Lemur.Windows.Text"
+             xmlns:convert="clr-namespace:Lemur.Windows.Converters"
              xmlns:controls="clr-namespace:TorboFile.Controls"
              xmlns:models="clr-namespace:TorboFile.ViewModels"
              DispatcherUnhandledException="Application_DispatcherUnhandledException" Startup="Application_Startup" Exit="Application_Exit">
