--- a/TorboFile/View/Controls/EditCategorySetView.xaml
+++ b/TorboFile/View/Controls/EditCategorySetView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TorboFile.Controls"
              xmlns:model="clr-namespace:TorboFile.ViewModels"
-             xmlns:v="clr-namespace:LerpingLemur.Windows.Validation"
+             xmlns:v="clr-namespace:Lemur.Windows.Validation"
              mc:Ignorable="d">
 
     <UserControl.Resources>
