--- a/TorboFile/View/Controls/FileSelectionView.xaml
+++ b/TorboFile/View/Controls/FileSelectionView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:TorboFile.Controls"
              xmlns:base="clr-namespace:TorboFile"
              xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
-             xmlns:convert="clr-namespace:LerpingLemur.Windows.Converters"
+             xmlns:convert="clr-namespace:Lemur.Windows.Converters"
              xmlns:models="clr-namespace:TorboFile.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
