--- a/TorboFile/View/Windows/MainMenu.xaml
+++ b/TorboFile/View/Windows/MainMenu.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TorboFile.Windows.MainWindow"
+﻿<Window x:Class="TorboFile.View.Windows.MainWindow"
         x:Name="mainWindow"
         x:FieldModifier="public"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -7,7 +7,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TorboFile"
         xmlns:lerp="clr-namespace:Lemur.Windows.Controls"
-        xmlns:controls="clr-namespace:TorboFile.Controls"
+        xmlns:controls="clr-namespace:TorboFile.View.Controls"
         xmlns:converters="clr-namespace:Lemur.Windows.Converters"
         xmlns:svg="http://sharpvectors.codeplex.com/svgc/"
         mc:Ignorable="d"
