--- a/TorboFile/View/Controls/CategoryManagerView.xaml
+++ b/TorboFile/View/Controls/CategoryManagerView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="TorboFile.Controls.CategoryManagerView"
+﻿<UserControl x:Class="TorboFile.View.Controls.CategoryManagerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TorboFile.Controls"
+             xmlns:local="clr-namespace:TorboFile.View.Controls"
              xmlns:categories="clr-namespace:TorboFile.Categories"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:convert="clr-namespace:Lemur.Windows.Converters"
