--- a/TorboFile/View/Controls/EditCategorySetView.xaml
+++ b/TorboFile/View/Controls/EditCategorySetView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="TorboFile.Controls.EditCategorySetView"
+﻿<UserControl x:Class="TorboFile.View.Controls.EditCategorySetView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TorboFile.Controls"
+             xmlns:local="clr-namespace:TorboFile.View.Controls"
              xmlns:model="clr-namespace:TorboFile.ViewModels"
              xmlns:v="clr-namespace:Lemur.Windows.Validation"
              mc:Ignorable="d">
