--- a/TorboFile/View/Controls/FileSelectionView.xaml
+++ b/TorboFile/View/Controls/FileSelectionView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="TorboFile.Controls.FileSelectionView"
+﻿<UserControl x:Class="TorboFile.View.Controls.FileSelectionView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TorboFile.Controls"
+             xmlns:local="clr-namespace:TorboFile.View.Controls"
              xmlns:base="clr-namespace:TorboFile"
              xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
              xmlns:convert="clr-namespace:Lemur.Windows.Converters"
