--- a/TorboFile/View/Controls/MainViews/CleanFoldersControl.xaml
+++ b/TorboFile/View/Controls/MainViews/CleanFoldersControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="TorboFile.Controls.CleanFoldersControl"
+﻿<UserControl x:Class="TorboFile.View.Controls.CleanFoldersControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TorboFile.Controls"
+             xmlns:local="clr-namespace:TorboFile.View.Controls"
              xmlns:lerp="clr-namespace:Lemur.Windows.Controls"
              mc:Ignorable="d" 
              xmlns:prefs="clr-namespace:TorboFile.Properties"
