--- a/TorboFile/View/Controls/MainViews/CustomSearch.xaml
+++ b/TorboFile/View/Controls/MainViews/CustomSearch.xaml
@@ -1,14 +1,18 @@
-﻿<UserControl x:Class="TorboFile.View.Controls.ViewTextControl"
+﻿<UserControl x:Class="TorboFile.View.Controls.MainViews.CustomSearch"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TorboFile.View.Controls"
+             xmlns:local="clr-namespace:TorboFile.View.Controls.MainViews"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
-    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-        <TextBlock x:Name="FldText" Text="{Binding Text}" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch"/>
-    </ScrollViewer>
+	<!-- Use with CustomSearchVM -->
+	<Grid>
+
+		<Button Name="btnAdd" Style="{StaticResource StdButton}"/>
+		<Button Name="btnSave" Style="{StaticResource StdButton}"/>
+
+	</Grid>
 
 </UserControl>
