--- a/TorboFile/View/Controls/MainViews/FileSortControl.xaml
+++ b/TorboFile/View/Controls/MainViews/FileSortControl.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="TorboFile.Controls.FileSortControl"
+﻿<UserControl x:Class="TorboFile.View.Controls.FileSortControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TorboFile.Controls"
+             xmlns:local="clr-namespace:TorboFile.View.Controls"
              mc:Ignorable="d"
              xmlns:models="clr-namespace:TorboFile.ViewModels"
-             xmlns:controls="clr-namespace:TorboFile.Controls"
+             xmlns:controls="clr-namespace:TorboFile.View.Controls"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:mime="clr-namespace:Lemur.Windows"
              xmlns:effects="clr-namespace:TorboFile"
