--- a/TorboFile/View/Controls/MainViews/FindDuplicatesControl.xaml
+++ b/TorboFile/View/Controls/MainViews/FindDuplicatesControl.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="TorboFile.Controls.FindDuplicatesControl"
+﻿<UserControl x:Class="TorboFile.View.Controls.FindDuplicatesControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TorboFile.Controls"
+             xmlns:local="clr-namespace:TorboFile.View.Controls"
              xmlns:lerp="clr-namespace:Lemur.Windows.Controls"
              xmlns:convert="clr-namespace:Lemur.Windows.Converters"
              mc:Ignorable="d"
-             xmlns:controls="clr-namespace:TorboFile.Controls"
+             xmlns:controls="clr-namespace:TorboFile.View.Controls"
              xmlns:model="clr-namespace:TorboFile.ViewModels"
              xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
              xmlns:settings="clr-namespace:TorboFile.Properties"
