--- a/TorboFile/View/Controls/PreviewViews/MediaKitPreview.xaml
+++ b/TorboFile/View/Controls/PreviewViews/MediaKitPreview.xaml
@@ -1,16 +1,16 @@
-﻿<local:PreviewControl x:Class="TorboFile.Controls.MediaKitPreview"
+﻿<local:PreviewControl x:Class="TorboFile.View.Controls.MediaKitPreview"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TorboFile.Controls"
+             xmlns:local="clr-namespace:TorboFile.View.Controls"
               xmlns:media="clr-namespace:WPFMediaKit.DirectShow.Controls;assembly=WPFMediaKit"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
 
         <StackPanel DockPanel.Dock="Bottom" VerticalAlignment="Center" Orientation="Horizontal" MaxHeight="32" HorizontalAlignment="Center">
-            <Button x:Name="BtnPause"  Style="{StaticResource StdButton}" Click="BtnPause_Click" Margin="4,0,4,0" ToolTip="Pause Media" MinWidth="32" MinHeight="32" BorderBrush="{x:Null}">
+            <Button x:Name="BtnPause"  Style="{StaticResource StdButton}" Click="BtnPause_Click" Margin="4,0,4,0" ToolTip="Pause Media" MinWidth="32" MinHeight="32">
 
                 <Image Source="/TorboFile;component/assets/images/media-playback-pause-8.png" Stretch="Uniform"/>
 
