--- a/TorboFile/View/Controls/PreviewViews/ViewImageControl.xaml
+++ b/TorboFile/View/Controls/PreviewViews/ViewImageControl.xaml
@@ -1,9 +1,9 @@
-﻿<local:PreviewControl x:Class="TorboFile.Controls.ViewImageControl"
+﻿<local:PreviewControl x:Class="TorboFile.View.Controls.ViewImageControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TorboFile.Controls"
+             xmlns:local="clr-namespace:TorboFile.View.Controls"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:gif="http://wpfanimatedgif.codeplex.com"
              xmlns:lemur="clr-namespace:Lemur.Windows.Images"
