--- a/TorboFile/View/Controls/PreviewViews/ViewMediaControl.xaml
+++ b/TorboFile/View/Controls/PreviewViews/ViewMediaControl.xaml
@@ -1,9 +1,9 @@
-﻿<local:PreviewControl x:Class="TorboFile.Controls.ViewMediaControl"
+﻿<local:PreviewControl x:Class="TorboFile.View.Controls.ViewMediaControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TorboFile.Controls"
+             xmlns:local="clr-namespace:TorboFile.View.Controls"
        
              mc:Ignorable="d"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
