--- a/TorboFile/View/Controls/PreviewViews/ViewUnknownControl.xaml
+++ b/TorboFile/View/Controls/PreviewViews/ViewUnknownControl.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="TorboFile.Controls.ViewUnknownControl"
+﻿<UserControl x:Class="TorboFile.View.Controls.ViewUnknownControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TorboFile.Controls"
+             xmlns:local="clr-namespace:TorboFile.View.Controls"
              mc:Ignorable="d" HorizontalAlignment="Center" HorizontalContentAlignment="Center">
     <DockPanel>
         <TextBlock DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Center">Unknown File Type</TextBlock>
