--- a/TorboFile/View/Windows/CategoryManagerWindow.xaml
+++ b/TorboFile/View/Windows/CategoryManagerWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="TorboFile.Windows.CategoryManagerWindow"
+﻿<Window x:Class="TorboFile.View.Windows.CategoryManagerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:controls="clr-namespace:TorboFile.Controls"
-        xmlns:local="clr-namespace:TorboFile.Windows"
+        xmlns:controls="clr-namespace:TorboFile.View.Controls"
+        xmlns:local="clr-namespace:TorboFile.View.Windows"
         mc:Ignorable="d"
         Title="Category Manager">
 
