--- a/TorboFile/View/Windows/MessageBoxWindow.xaml
+++ b/TorboFile/View/Windows/MessageBoxWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="TorboFile.Windows.MessageBoxWindow"
+﻿<Window x:Class="TorboFile.View.Windows.MessageBoxWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TorboFile.Windows"
-        xmlns:controls="clr-namespace:TorboFile.Controls"
+        xmlns:local="clr-namespace:TorboFile.View.Windows"
+        xmlns:controls="clr-namespace:TorboFile.View.Controls"
         mc:Ignorable="d"
         ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
         HorizontalContentAlignment="Stretch" Height="150" MaxWidth="400"
