--- a/TorboFile/View/Windows/SettingsWindow.xaml
+++ b/TorboFile/View/Windows/SettingsWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="TorboFile.Windows.SettingsWindow"
+﻿<Window x:Class="TorboFile.View.Windows.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TorboFile"
         xmlns:settings="clr-namespace:TorboFile.Properties"
-        xmlns:controls="clr-namespace:TorboFile.Controls"
+        xmlns:controls="clr-namespace:TorboFile.View.Controls"
         xmlns:convert="clr-namespace:Lemur.Windows.Converters"
 
         mc:Ignorable="d" Background="{StaticResource BackDarkBrush}"
